Corrections made, put in margin and padding properties, align items and new container

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -10,6 +10,7 @@ body {
 
 .header {
   display: flex;
+  justify-content: space-between;
   padding: 8px;
   background: white;
   border-bottom: 1px solid #ddd;
@@ -22,7 +23,6 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-  margin: 0px 0px 0px 16px;
 }
 
 .logo {
@@ -37,7 +37,7 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 10px;
+  padding: 8px 24px;
 }
 
 a {
@@ -48,18 +48,15 @@ a {
 
 ul {
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 16px;
   list-style-type: none;
 }
 
-ul .links {
-  justify-content:space-between;
-  justify-items: stretch;
-  
+.left_sec, .right_sec {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
-.right_sec {
-  display: flex;
-  margin-left: auto;
-  margin-right: 0px;
-}
